[package]
name = "rusty_alfred"
version = "0.1.1"
authors = ["Kyle Clemens <me@kyleclemens.com>"]

description = "Interaction with Alfred 3 workflows"
repository = "https://github.com/jkcclemens/rusty_alfred"
documentation = "https://docs.rs/crate/rusty_alfred/"
license = "MPL-2.0"
readme = "README.md"
keywords = ["alfred", "workflow"]

[dependencies]
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
error-chain = "0.5"
